--- a/Practica25.Infrastructure/Practica25.Infrastructure.csproj
+++ b/Practica25.Infrastructure/Practica25.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Practica25.Domain\Practica25.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
