--- a/Practica25/Practica25.Client/Practica25.Client.csproj
+++ b/Practica25/Practica25.Client/Practica25.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Practica25.Shared\Practica25.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
