--- a/Practica25/Practica25/appsettings.json
+++ b/Practica25/Practica25/appsettings.json
@@ -2,11 +2,13 @@
      "ConnectionStrings": {
           "DefaultConnection": "Server=sql-server-db,1433;Database=Practica25DB;User Id=sa;Password=265139Dn#$;TrustServerCertificate=True;MultipleActiveResultSets=true"
      },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+     "Logging": {
+          "LogLevel": {
+               "Default": "Information",
+               "Microsoft.AspNetCore": "Warning"
+          }
+     },
+     "AllowedHosts": "*",
+
+
 }
